--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,12 @@
 
 /* Your CSS Code here. */
-.Accio{
+main{
 	height:150px;
 	width:150px;
 	background-color:black;
 
 }
-.hello-accio-job{
+.hello-accio{
 	color:white;
 	margin-left:32px;
 	padding:10px;
