--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,12 @@
 
 /* Your CSS Code here. */
-main{
+.Accio{
 	height:150px;
 	width:150px;
 	background-color:black;
 
 }
-.hello-accio{
+.hello-accio-job{
 	color:white;
 	margin-left:32px;
 	padding:10px;
